# project-lungaw

./: .gitignore  LICENSE  README.md
KaizenApp/: app.json  package-lock.json  package.json
KaizenApp/android/: settings.gradle
KaizenApp/android/app/: build.gradle
KaizenApp/android/app/src/main/java/com/kaizenapp/: MainActivity.kt  MainApplication.kt
KaizenApp/android/app/src/main/res/values/: strings.xml
KaizenApp/ios/: Podfile
KaizenApp/ios/KaizenApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
KaizenApp/ios/KaizenApp.xcodeproj/: project.pbxproj
KaizenApp/ios/KaizenApp.xcodeproj/xcshareddata/xcschemes/: KaizenApp.xcscheme
client/: README.md  app.json  package-lock.json  package.json
server/: README.md  main.py  pyproject.toml
