[project]
name = "lung-aw_server"
version = "0.1.0"
description = "Project Lung-aw Server using FastAPI and Postgres"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
    "ty>=0.0.1a14",
]
